it/tu/prometheus/pillan/alertmanager-ingress.yaml
---
# Source: grafana/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pillan-alertmanager
  namespace: it-monitoring
  labels: {}
  annotations:
    cert-manager.io/issuer: "it-letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
      - pillan-alertmanager.tu.lsst.org
      secretName: pillan-alertmanager-tls
  rules:
  - host: pillan-alertmanager.tu.lsst.org
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: alertmanager-operated
              port:
                number: 9093
